# jovian-careers-website-v2

./: .replit  LICENSE  README.md  app.py  application.html  database.py  pyproject.toml  requirements.txt
static/: stt.css
templates/: 404.html  500.html  application_form.html  application_form2.html  application_submitted.html  bootstrap.html  footer.html  hero.html  home.html  jobitem.html  jobpage.html  jobpagebanner.html  light_dark.html  nav.html
